feat: Apply task naming regex to the task command and the setup